chore : 한달 조회 쿼리 Order by절 변경